# shoprpa_v2

./: BUILD_GUIDE.md  FAQ.md  README.md  build.bat  package.json  pnpm-workspace.yaml
backend/ai-service/: .dockerignore  .env.example  Dockerfile  README.md  pyproject.toml  run.py
backend/ai-service/app/: config.py  database.py  logger.py  main.py  redis_op.py
backend/ai-service/app/dependencies/: __init__.py  points.py
backend/ai-service/app/internal/: admin.py
backend/ai-service/app/middlewares/: tracing.py
backend/ai-service/app/models/: __init__.py  point.py  smart_component.py
backend/ai-service/app/prompts/: business_analysis_prompt.md  code_review_prompt.md  document_summary_prompt.md  email_writer_prompt.md  sql_generator_prompt.md  translate_prompt.md
backend/ai-service/app/prompts/contract/: contract_common_prompt.md
backend/ai-service/app/prompts/recruit/: recruit_keywords_prompt.md  recruit_rating_prompt_custom.md  recruit_rating_prompt_default.md
backend/ai-service/app/prompts/smart/: data_process_prompt.md  optimize_input_prompt.md  web_auto_prompt.md
backend/ai-service/app/routers/: computer_use.py  jfbym.py  ocr.py  smart_component.py
backend/ai-service/app/routers/v1/: chat.py  models.py
backend/ai-service/app/schemas/: __init__.py  chat.py  jfbym.py
backend/ai-service/app/services/: __init__.py  chat.py  point.py
backend/ai-service/app/utils/: jfbym.py  ocr.py  prompt.py
backend/ai-service/tests/: __init__.py  conftest.py  test_main.py
backend/ai-service/tests/routers/: __init__.py  test_admin.py  test_ocr.py
(+1665 files in other folders)
