[project]
name = "ai-service"
version = "0.1.0"
description = "ShopRPA AI and credit service"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aiomysql>=0.2.0",
    "bcrypt>=4.3.0",
    "cryptography>=45.0.2",
    "fastapi>=0.115.12",
    "greenlet>=3.2.2",
    "httpx>=0.28.1",
    "pydantic-settings>=2.9.1",
    "python-dotenv>=1.1.0",
    "redis>=6.1.0",
    "sqlalchemy>=2.0.41",
    "pytz",
    "uvicorn>=0.34.0"
]

[dependency-groups]
dev = [
    "pytest>=8.3.5",
    "pytest-asyncio>=0.26.0",
    "pytest-cov>=6.1.1",
    "ruff>=0.11.11",
]

[tool.pytest.ini_options]
asyncio_default_fixture_loop_scope = "function"
